2022-12-03  Luigi Scarso <luigi.scarso@gmail.com> 
    * Track last node in ligature handling (M.Krüger)

2022-12-03  Luigi Scarso <luigi.scarso@gmail.com> 
    * Make disc node prev. pointers more uniform (M.Krüger)

2022-11-20  Luigi Scarso <luigi.scarso@gmail.com> 
    * set \variablefam = -1 as initial value (H.Hagen).

2022-11-20  Luigi Scarso <luigi.scarso@gmail.com> 
    * Ensured that load_hyphenation has enough Lua stack, and pops the latest table pushed in (Michal Vlasák).

2022-11-10  Luigi Scarso <luigi.scarso@gmail.com> 
    * Better error message if setlocale fails

2022-10-28  Luigi Scarso <luigi.scarso@gmail.com> 
    * \variablefam (backport from luametatex, handy for latex) (H .Hagen)

2022-10-22  Luigi Scarso <luigi.scarso@gmail.com> 
     * STOP COMMITS TO SVN REPO -- WORK IN PROGRESS

2022-10-22  Luigi Scarso <luigi.scarso@gmail.com> 
     * porting texlive patch r53155 -- WORK IN PROGRESS

2022-09-29  Luigi Scarso <luigi.scarso@gmail.com> 
     * Fixed an infinite loop with --halt-on-error option (K.Berry)

2022-08-16  Luigi Scarso <luigi.scarso@gmail.com> 
     * Accent 0xFFFD but still error on invalid utf (compatible) (H.Hagen)
     * omitinfodict added: \pdfvariable omitinfodict 1 omit Info dicttionary (H.Hagen)

2022-08-05  Luigi Scarso <luigi.scarso@gmail.com> 
     * Fixed a missed lua_settop in lua_appendtovlist_callback() (thanks to Hironori KITAGAWA)

2022-07-31  Luigi Scarso <luigi.scarso@gmail.com>
    * Fixed loading .tex when  --output-directory is enabled

2022-07-30  Luigi Scarso <luigi.scarso@gmail.com>
    * Backtrack replace pointer when successive disc in exceptions  (H.Hagen)

2022-07-30  Luigi Scarso <luigi.scarso@gmail.com>
    * Take exception pre/port disc font from wordstart (H.Hagen)

2022-05-23  Luigi Scarso <luigi.scarso@gmail.com>
    * Fixed mp_begin_iteration (H.Hagen)

2022-05-15  Luigi Scarso <luigi.scarso@gmail.com>
    * Fixed a memory leak in mplib (H.Hagen)
