@@ -1,3 +1,6 @@
+2022-12-05  Luigi Scarso <luigi.scarso@gmail.com> 
+    * complementaty patch for revision 7551 (lua end compatibility) (H.Hagen)
+
 2022-12-03  Luigi Scarso <luigi.scarso@gmail.com> 
     * Track last node in ligature handling (M.Krüger)
 
